Adding version control and commands

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "autoload": {
         "classmap": [
+            "src/commands",
             "src/controllers",
             "src/database/migrations",
             "src/database/seeds",
